--- a/templates/base-Admin.html.twig
+++ b/templates/base-Admin.html.twig
@@ -7,6 +7,7 @@
         <script src="/jquery-3.3.1.min (1).js" type="text/javascript"></script>
 
         <link href="/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+        <link href="/css/admin.css" rel="stylesheet" type="text/css"/>
         <script src="/js/bootstrap.bundle.js" type="text/javascript"></script>
 
 
@@ -24,6 +25,13 @@
             <a class="btn btn-outline-primary" href="#">Login</a>
         </div>
     {% endblock %}
-{% block javascripts %}{% endblock %}
+
+    {% block javascripts %}
+        <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
+        <script>
+            feather.replace()
+        </script>
+
+    {% endblock %}
 </body>
 </html>
