--- a/templates/base-admin.html.twig
+++ b/templates/base-admin.html.twig
@@ -21,7 +21,7 @@
       
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-          <a class="nav-link" href="#">Sign out</a>
+          <a class="nav-link" href="{{ logout_path() }}">{{ app.user.nome }}(Sign out)</a>
         </li>
       </ul>
     </nav>
@@ -62,7 +62,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{{ path('usuario_index') }}">
                   <span data-feather="user"></span>
                   Usuarios
                 </a>
