Obv que td deu errado!!

--- a/templates/quarto/_form.html.twig
+++ b/templates/quarto/_form.html.twig
@@ -17,6 +17,6 @@
 </div>
 
 
-    <button class="btn btn-info">Salvar</button>
+    <a name="botoes" href="{{ path('quarto_index') }}"  class="btn btn-info">Salvar</a>
 
 {{ form_end(form) }}
