--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,13 +15,14 @@
 <body>
 
         <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-            <h5 class="my-0 mr-md-auto font-weight-normal">Hotel Zin</h5>
+
+            <img class="my-0 mr-md-auto font-weight-normal" src="../../image/zin.png" alt="" width="100" height="30">
             <nav class="my-2 my-md-0 mr-md-3">
                 <a class="p-2 text-dark" href="#">O hotel</a>
                 <a class="p-2 text-dark" href="#">Acomodaçoes</a>
 
             </nav>
-            <a class="btn btn-outline-primary" href="">Login</a>
+            <a class="btn btn-outline-primary" href="/login">Login</a>
         </div>
         {% block body %}
     {% endblock %}
