--- a/templates/pagina/index.html.twig
+++ b/templates/pagina/index.html.twig
@@ -62,7 +62,9 @@
     </div>
 
     <div class="container">
-        <div class="card-deck mb-3 text-center">
+
+            <form action="{{ path('pesquisa') }}" method="post">
+                <div class="card-deck mb-3 text-center">
             <div class="card mb-4 shadow-sm">
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal">Selecione a Data</h4>
@@ -76,7 +78,7 @@
                     </div>
 
                     <div class="form-group">
-                        <select class="form-control">
+                        <select class="form-control" name="quantidade">
                             <option value="0">>--Quantidade de hospedes</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
@@ -86,11 +88,11 @@
 
                     </div>
 
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Pesquisar Disponibilidade</button>
+                    <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Pesquisar Disponibilidade</button>
                 </div>
             </div>
-
-        </div>
+                </div>
+        </form>
 
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
             <div class="row">
