--- a/templates/quarto/edit.html.twig
+++ b/templates/quarto/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('quarto/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('quarto_index') }}">back to list</a>
+    <a name="botoes" href="{{ path('quarto_index') }}" class="btn btn-dark">back to list</a>
 
     {{ include('quarto/_delete_form.html.twig') }}
 {% endblock %}
