--- a/templates/pagina/reservar.html.twig
+++ b/templates/pagina/reservar.html.twig
@@ -10,6 +10,15 @@
             <p class="lead">Confirme seus dados da reserva</p>
         </div>
 
+        {% for message in app.flashes('erro') %}
+            <div class="alert alert-danger" role="alert">
+                This is a danger alert—check it out!
+            </div>
+        {% endfor %}
+
+
+
+
         <div class="row">
             <div class="col-md-4 order-md-2 mb-4">
                 <h4 class="d-flex justify-content-between align-items-center mb-3">
@@ -46,12 +55,12 @@
                         <span class="text-success">-$5</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between">
-                        <span>Total (USD)</span>
-                        <strong>$20</strong>
+                        <span>Total (BRL)</span>
+                        <strong>R${{ totalReserva }}</strong>
                     </li>
                 </ul>
 
-                <form class="card p-2">
+                <form>
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Promo code">
                         <div class="input-group-append">
@@ -62,18 +71,18 @@
             </div>
             <div class="col-md-8 order-md-1">
                 <h4 class="mb-3"></h4>
-                <form class="needs-validation" novalidate>
+                <form  action="{{ path('confirmar_reserva') }}" method="post" class="needs-validation" novalidate>
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <label for="firstName">Primeiro Nome</label>
-                            <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                            <input type="text" class="form-control" id="firstName" name="firstName" placeholder="" value="" required>
                             <div class="invalid-feedback">
                                 Primeiro nome deve ser valido.
                             </div>
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="lastName">Ultimo Nome</label>
-                            <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                            <input type="text" class="form-control" id="lastName" name="lastName" placeholder="" value="" required>
                             <div class="invalid-feedback">
                                 Ultimo nome deve ser valido.
                             </div>
@@ -84,7 +93,7 @@
 
                     <div class="mb-3">
                         <label for="email">Email <span class="text-muted">(Opcional)</span></label>
-                        <input type="email" class="form-control" id="email" placeholder="SeuEmail@examplo.com">
+                        <input type="email" class="form-control" id="email" name="email" placeholder="SeuEmail@examplo.com">
                         <div class="invalid-feedback">
                             Please enter a valid email address for shipping updates.
                         </div>
@@ -92,7 +101,7 @@
 
                     <div class="mb-3">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
+                        <input type="text" class="form-control" id="address" name="address" placeholder="1234 Main St" required>
                         <div class="invalid-feedback">
                             Please enter your shipping address.
                         </div>
@@ -129,7 +138,7 @@
                         </div>
                     </div>
 
-
+                    <input type="hidden" value="{{ quarto.id }}" name="quarto" />
 
                     <button class="btn btn-primary btn-lg btn-block" type="submit">Confirmar Reseva</button>
                 </form>
